added: texttobrf using lbu_translateFile using liblouisutdml

--- a/brf-printer-app.1
+++ b/brf-printer-app.1
@@ -1,5 +1,5 @@
 
-.TH brf-printer-app 1 "brf-printer-app" "2022-04-24" "chandresh"
+.TH brf-printer-app 1 "brf-printer-app" "2024-07-20" "arun"
 .SH NAME
 brf-printer-app \- braille printer application
 .SH SYNOPSIS
@@ -228,4 +228,4 @@ brf-printer-app devices
 
 
 .SH COPYRIGHT
-Copyright \[co] 2022 by Chandresh Soni.
+Copyright \[co] 2024 by Arun Patwa.
